app/main/default/objects/LocalFlosum__FL_Sync__c/LocalFlosum__FL_Sync__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Job_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Number_of_Components__c</fullName>
        <label>Number of Components</label>
        <summaryForeignKey>LocalFlosum__FL_Sync_Component__c.LocalFlosum__Sync__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Succeed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Succeed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Sync_Type__c</fullName>
        <label>Sync Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upload</fullName>
                </value>
                <value>
                    <fullName>Download</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sync</label>
    <listViews>
        <fullName>LocalFlosum__All</fullName>
        <columns>NAME</columns>
        <columns>LocalFlosum__Sync_Type__c</columns>
        <columns>LocalFlosum__Number_of_Components__c</columns>
        <columns>LocalFlosum__Job_Completed__c</columns>
        <columns>LocalFlosum__Succeed__c</columns>
        <columns>LocalFlosum__Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>