app/main/default/objects/LocalFlosum__FL_Sync__c/fields/LocalFlosum__Branch_Name__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>