app/main/default/objects/LocalFlosum__FL_Sync__c/fields/LocalFlosum__Description__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>