app/main/default/objects/LocalFlosum__FL_Sync__c/fields/LocalFlosum__Number_of_Components__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Number_of_Components__c</fullName>
        <label>Number of Components</label>
        <summaryForeignKey>LocalFlosum__FL_Sync_Component__c.LocalFlosum__Sync__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>