app/main/default/objects/LocalFlosum__FL_Sync__c/fields/LocalFlosum__Sync_Type__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>LocalFlosum__Sync_Type__c</fullName>
        <label>Sync Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upload</fullName>
                </value>
                <value>
                    <fullName>Download</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>