app/main/default/objects/LocalFlosum__FL_Sync__c/listViews/LocalFlosum__All.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>LocalFlosum__All</fullName>
        <columns>NAME</columns>
        <columns>LocalFlosum__Sync_Type__c</columns>
        <columns>LocalFlosum__Number_of_Components__c</columns>
        <columns>LocalFlosum__Job_Completed__c</columns>
        <columns>LocalFlosum__Succeed__c</columns>
        <columns>LocalFlosum__Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>